# debitor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps/: streamlit_app.py
data/: graph_shard0.db  graph_shard1.db
examples/: cli.py
src/agent/: config.py  graph.py  otel.py  policies.py  prompts.py  sharding.py  state.py  tools.py
src/agent/nodes/: actions.py  classifier.py  finalize.py  llm.py  router.py  telemetry.py
src/agent/server/: api.py
src/debitor/: main.py  settings.py
src/debitor/graph/: state.py  workflow.py
src/debitor/graph/nodes/: balance.py  fallback.py  intent.py  pay.py
tests/: test_workflow.py
